--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -104,7 +104,7 @@
                         <div class="actions column flex">
                             <p class="sr-only">Ações</p>
                             <a
-                                href="/job/edit"
+                                href="/job/<%= job.id %> "
                                 class="button white edit"
                                 title="Editar Job"
                             >
@@ -132,6 +132,7 @@
         </div>
         <!-- end container -->
 
+        <!-- modal -->
         <div class="modal-wrapper">
             <div class="modal">
                 <img
