--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -23,27 +23,26 @@
         />
     </head>
     <body id="page-profile">
-      
         <!--adicionando header -->
         <%- include('parts/page-header', {title: "Meu Perfil" }) %>
 
         <div class="container animate-up delay-2">
             <aside class="card">
-                <img
-                    src="<%= profile.avatar %> "
-                    alt="<%= profile.name %> "
-                />
-                <h2><%= profile.name %> </h2>
+                <img src="<%= profile.avatar %> " alt="<%= profile.name %> " />
+                <h2><%= profile.name %></h2>
                 <p>
                     O valor da sua hora é <br />
-                    <strong>R$ 75,00</strong>
+                    <strong
+                        >R$ <%= profile["value-hour"].toFixed(2).replace('.',
+                        ',') %>
+                    </strong>
                 </p>
                 <button class="button green" form="form-profile" type="submit">
                     Salvar dados
                 </button>
             </aside>
             <main>
-                <form id="form-profile">
+                <form id="form-profile" method="POST" action="/profile">
                     <fieldset>
                         <legend>Dados do perfil</legend>
                         <div class="separator light"></div>
@@ -51,7 +50,12 @@
                         <div class="input-group">
                             <div class="input-wrapper">
                                 <label for="name">Nome</label>
-                                <input type="text" id="name" name="name" value="<%= profile.name %> " />
+                                <input
+                                    type="text"
+                                    id="name"
+                                    name="name"
+                                    value="<%= profile.name %> "
+                                />
                             </div>
 
                             <div class="input-wrapper">
@@ -77,14 +81,10 @@
                                     >Quanto eu <br />quero ganhar por
                                     mês?</label
                                 >
-                                <input
-                                    type="amount"
-                                    step="0.1"
-                                    id="monthly-budget"
-                                    name="monthly-budget"
-                                    placeholder="R$"
-                                    value="<%= profile["monthly-budget"] %>"
-                                />
+                                <input type="amount" step="0.1"
+                                id="monthly-budget" name="monthly-budget"
+                                placeholder="R$" value="<%=
+                                profile["monthly-budget"] %>" />
                             </div>
 
                             <div class="input-wrapper">
@@ -92,12 +92,9 @@
                                     >Quantas horas <br />
                                     quero trabalhar por dia?</label
                                 >
-                                <input
-                                    type="number"
-                                    id="hours-per-day"
-                                    name="hours-per-day"
-                                    value="<%= profile["hours-per-day"] %>"
-                                />
+                                <input type="number" id="hours-per-day"
+                                name="hours-per-day" value="<%=
+                                profile["hours-per-day"] %>" />
                             </div>
                         </div>
 
@@ -107,12 +104,9 @@
                                     >Quantos dias <br />quero trabalhar por
                                     semana?</label
                                 >
-                                <input
-                                    type="number"
-                                    id="days-per-week"
-                                    name="days-per-week"
-                                    value="<%= profile["days-per-week"] %>"
-                                />
+                                <input type="number" id="days-per-week"
+                                name="days-per-week" value="<%=
+                                profile["days-per-week"] %>" />
                             </div>
 
                             <div class="input-wrapper">
@@ -120,12 +114,9 @@
                                     >Quantas semanas <br />
                                     por ano você quer tirar férias?</label
                                 >
-                                <input
-                                    type="number"
-                                    id="vacation-per-year"
-                                    name="vacation-per-year"
-                                    value="<%= profile["vacation-per-year"] %>"
-                                />
+                                <input type="number" id="vacation-per-year"
+                                name="vacation-per-year" value="<%=
+                                profile["vacation-per-year"] %>" />
                             </div>
                         </div>
                     </fieldset>
